<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#e2cbb9">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/prodDePalmSierSur"
            android:id="@+id/textView2"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView5"
                android:src="@drawable/palmasierrasur2" />

            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infProducPalmas"
                android:textStyle="italic"
                android:textSize="16sp"
                android:textAlignment="center"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/preUbicacion"
            android:id="@+id/textView3"
            android:textSize="25sp"
            android:textColor="#0000f0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mixtepec"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obtUbicacion"
            android:id="@+id/btnUbicacion"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

    </LinearLayout>
</RelativeLayout>