<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#c5b096">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:weightSum="1"
        android:background="@android:color/transparent"
        android:layout_marginTop="9dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sierraSur"
            android:id="@+id/txtSierraSur"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_weight="0.03" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pregunta"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="25sp"
            android:layout_weight="0.10" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infSierraSur"
                android:textStyle="normal"
                android:textSize="17sp"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:src="@drawable/artsierrasur" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/spnArtesanias" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/lugsierrasur" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/spnLugares"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>